--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    
+    <link rel="stylesheet" href="styles/style.css">
     <title>Tools4Dev</title>
 </head>
 <body>
@@ -13,8 +13,19 @@
             <h1>Tools4Dev</h1>
         </div>
         <div class="content">
+            <div class="ipt-text">
+                <textarea></textarea>
+            </div>
+            <button class="btn-convert">Convert</button>
 
         </div>
+
+        <span class="out-text">
+            ...
+        </span>
     </div>
+
+
+    <script src="js/textTools.js"></script>
 </body>
 </html> 
